--- a/index.html
+++ b/index.html
@@ -146,8 +146,11 @@
     <!-- JavaScript Logic -->
     <script>
         const API_URL_BASE = "https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-09-2025:generateContent";
-        // --- API Key Inserted ---
-        const API_KEY = "AIzaSyDNqIDiUXcXVoeFkvjGnnfstmmcmDglo_s";
+        
+        // --- API Key Configuration ---
+        // CRITICAL: This MUST be empty when running inside the Canvas/Immersive environment
+        // It MUST contain your 'AIzaSy...' key when hosted externally (like GitHub Pages).
+        const API_KEY = ""; 
 
         // UI Elements
         const videoFeed = document.getElementById('video-feed');
@@ -430,8 +433,10 @@
                 console.error("Analysis failed:", error);
 
                 let detailMsg = error.message;
-                if (detailMsg.includes("400")) {
-                    detailMsg = "Bad Request (400): The request structure is invalid. (Check console for payload details.)";
+                if (detailMsg.includes("403")) {
+                    detailMsg = "Forbidden (403): The API key is invalid or has been revoked. Please replace the key in the code with a new one from Google AI Studio.";
+                } else if (detailMsg.includes("400")) {
+                    detailMsg = "Bad Request (400): The request structure is invalid. (This often happens when a manually entered key is present in the Canvas environment. Check the code comments for configuration instructions.)";
                 } else if (detailMsg.includes("500")) {
                     detailMsg = "Server Error (500): The AI service is currently unavailable. Please try again later.";
                 } else if (detailMsg.includes("unexpected token")) {
